--- a/app/assets/stylesheets/mobile/menu-panel.scss
+++ b/app/assets/stylesheets/mobile/menu-panel.scss
@@ -33,6 +33,13 @@
       transition: transform 0.1s linear;
     }
   }
+  &.moving {
+    // PERF: only render first 20 items in a list to allow for smooth
+    // pan events
+    li:nth-child(n + 20) {
+      display: none;
+    }
+  }
 }
 
 .user-menu .quick-access-panel.quick-access-profile li:not(.show-all) {
