FEATURE: allow default penalty values to be chosen
Adds a site setting that designates default penalty values in hours.

Silence/suspend modals will auto-fill in the default values, but otherwise
will still allow moderators to pick and overwrite values as normal.

First silence/suspend: first value
Second silence/suspend: second value
etc.

Penalty counts are forgiven at the same rate as tl3 promotion requirements do.

--- a/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-silence-user.hbs
@@ -21,6 +21,7 @@
           includeFarFuture=true
           clearable=false
           input=silenceUntil
+          initialInput=silenceUntilDefault
           onChangeInput=(action (mut silenceUntil))
         }}
       </label>
