--- a/app/assets/javascripts/admin/addon/templates/modal/admin-suspend-user.hbs
+++ b/app/assets/javascripts/admin/addon/templates/modal/admin-suspend-user.hbs
@@ -22,6 +22,7 @@
             includeFarFuture=true
             clearable=false
             input=suspendUntil
+            initialInput=suspendUntilDefault
             onChangeInput=(action (mut suspendUntil))
           }}
         </label>
