--- a/app/assets/javascripts/discourse/app/templates/exception.hbs
+++ b/app/assets/javascripts/discourse/app/templates/exception.hbs
@@ -1,22 +1,26 @@
 <div class="container">
-  <div class="error-page">
-    <div class="face">:(</div>
-    <div class="reason">{{reason}}</div>
-    <div class="url">
-      {{i18n "errors.prev_page"}} <a href={{requestUrl}} data-auto-route="true">{{requestUrl}}</a>
-    </div>
-    <div class="desc">
-      {{#if networkFixed}}
-        {{d-icon "check-circle"}}
-      {{/if}}
+  {{#if (and this.errorHtml this.isForbidden)}}
+    <div class="not-found">{{html-safe this.errorHtml}}</div>
+  {{else}}
+    <div class="error-page">
+      <div class="face">:(</div>
+      <div class="reason">{{reason}}</div>
+      <div class="url">
+        {{i18n "errors.prev_page"}} <a href={{requestUrl}} data-auto-route="true">{{requestUrl}}</a>
+      </div>
+      <div class="desc">
+        {{#if networkFixed}}
+          {{d-icon "check-circle"}}
+        {{/if}}
 
-      {{desc}}
+        {{desc}}
+      </div>
+      <div class="buttons">
+        {{#each enabledButtons as |buttonData|}}
+          {{d-button icon=buttonData.icon action=buttonData.action label=buttonData.key class=buttonData.classes}}
+        {{/each}}
+        {{conditional-loading-spinner condition=loading}}
+      </div>
     </div>
-    <div class="buttons">
-      {{#each enabledButtons as |buttonData|}}
-        {{d-button icon=buttonData.icon action=buttonData.action label=buttonData.key class=buttonData.classes}}
-      {{/each}}
-      {{conditional-loading-spinner condition=loading}}
-    </div>
-  </div>
+  {{/if}}
 </div>
