--- a/app/views/layouts/no_ember.html.erb
+++ b/app/views/layouts/no_ember.html.erb
@@ -13,8 +13,11 @@
   <%= build_plugin_html 'server:before-head-close' %>
 </head>
 <body class="no-ember <%= @custom_body_class %>">
-  <%= theme_lookup("header") %>
-  <%= build_plugin_html 'server:header' %>
+  <%- unless customization_disabled? %>
+    <%= theme_lookup("header") %>
+    <%= build_plugin_html 'server:header' %>
+  <%- end %>
+
   <section id='main'>
     <%= render partial: 'header', locals: { hide_auth_buttons: local_assigns[:hide_auth_buttons] } %>
     <div id="main-outlet" class="<%= @container_class ? @container_class : 'wrap' %>">
