--- a/app/assets/javascripts/admin/addon/templates/components/admin-report.hbs
+++ b/app/assets/javascripts/admin/addon/templates/components/admin-report.hbs
@@ -137,6 +137,7 @@
                     label=chartGrouping.label
                     action=(action "changeGrouping" chartGrouping.id)
                     class=chartGrouping.class
+                    disabled=chartGrouping.disabled
                   }}
                 {{/each}}
               </div>
