--- a/app/assets/javascripts/admin/addon/templates/components/admin-report.hbs
+++ b/app/assets/javascripts/admin/addon/templates/components/admin-report.hbs
@@ -122,7 +122,7 @@
               <div class="modes">
                 {{#each displayedModes as |displayedMode|}}
                   {{d-button
-                    action=(action "changeMode")
+                    action=(action "onChangeMode")
                     actionParam=displayedMode.mode
                     class=displayedMode.cssClass
                     icon=displayedMode.icon}}
