--- a/app/assets/javascripts/admin/addon/templates/components/watched-word-form.hbs
+++ b/app/assets/javascripts/admin/addon/templates/components/watched-word-form.hbs
@@ -16,10 +16,12 @@
     {{tag-chooser
       id="watched-tag"
       class="watched-word-input-field"
-      allowCreate=true
-      disabled=formSubmitted
       tags=selectedTags
       onChange=(action "changeSelectedTags")
+      options=(hash
+        allowAny=true
+        disabled=formSubmitted
+      )
     }}
   </div>
 {{/if}}
@@ -31,7 +33,7 @@
   </div>
 {{/if}}
 
-{{d-button class="btn-default" action=(action "submit") disabled=formSubmitted label="admin.watched_words.form.add"}}
+{{d-button class="btn btn-primary" action=(action "submit") disabled=formSubmitted label="admin.watched_words.form.add"}}
 
 {{#if showMessage}}
   <span class="success-message">{{message}}</span>
