--- a/app/assets/javascripts/discourse/app/templates/mobile/components/directory-item.hbs
+++ b/app/assets/javascripts/discourse/app/templates/mobile/components/directory-item.hbs
@@ -1,7 +1,7 @@
 {{user-info user=item.user}}
 
 {{#each columns as |column|}}
-  {{#if (directory-column-is-automatic column=column)}}
+  {{#if column.automatic}}
     <div class="user-stat">
       <span class="value">
         {{directory-item-value item=item column=column}}
