--- a/app/assets/javascripts/discourse/app/templates/modal/edit-user-directory-columns.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/edit-user-directory-columns.hbs
@@ -8,12 +8,10 @@
           <div class="left-content">
             <label class="column-name">
               {{input type="checkbox" checked=column.enabled}}
-              {{#if (directory-column-is-automatic column=column)}}
+              {{#if column.automatic}}
                 {{directory-table-header-title field=column.name labelKey=labelKey icon=column.icon}}
-              {{else if (directory-column-is-user-field column=column)}}
-                {{directory-table-header-title field=column.user_field.name translated=true}}
               {{else}}
-                {{directory-table-header-title field=(i18n column.name) translated=true}}
+                {{directory-table-header-title field=column.user_field.name translated=true}}
               {{/if}}
             </label>
           </div>
