--- a/app/views/layouts/no_ember.html.erb
+++ b/app/views/layouts/no_ember.html.erb
@@ -8,13 +8,22 @@
   <%= render partial: "common/discourse_stylesheet" %>
   <%= discourse_csrf_tags %>
 
-  <%= theme_lookup("head_tag") %>
+  <%- unless customization_disabled? %>
+    <%= theme_lookup("head_tag") %>
+  <%- end %>
+
   <%= yield(:no_ember_head) %>
-  <%= build_plugin_html 'server:before-head-close' %>
+
+  <%- if allow_plugins? %>
+    <%= build_plugin_html 'server:before-head-close' %>
+  <%- end -%>
 </head>
 <body class="no-ember <%= @custom_body_class %>">
   <%- unless customization_disabled? %>
     <%= theme_lookup("header") %>
+  <%- end %>
+
+  <%- if allow_plugins? %>
     <%= build_plugin_html 'server:header' %>
   <%- end %>
 
@@ -24,9 +33,15 @@
       <%= yield %>
     </div>
   </section>
-  <%= theme_lookup("footer") %>
-  <%= theme_lookup("body_tag") %>
-  <%= build_plugin_html 'no-client:footer' %>
-  <%= build_plugin_html 'server:before-body-close' %>
+
+  <%- unless customization_disabled? %>
+    <%= theme_lookup("footer") %>
+    <%= theme_lookup("body_tag") %>
+  <%- end %>
+
+  <%- if allow_plugins? %>
+    <%= build_plugin_html 'no-client:footer' %>
+    <%= build_plugin_html 'server:before-body-close' %>
+  <%- end %>
 </body>
 </html>
