UX: update member visibility help text to include flair information
This commit updates group member visibility help text to include the
flair visibility information.

--- a/app/assets/javascripts/discourse/app/templates/components/groups-form-interaction-fields.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/groups-form-interaction-fields.hbs
@@ -30,7 +30,7 @@
     }}
 
     <div class="control-instructions">
-      {{i18n "admin.groups.manage.interaction.members_visibility_levels.description"}}
+      {{i18n membersVisibilityLevelsDescription}}
     </div>
   </div>
 {{/if}}
