FEATURE: Allow linking an existing account from invite acceptance
The invite acceptance page is an alternative signup flow, so it makes sense to include the new 'link' functionality there as well.

Followup to 7dc8f8b794cbb36b14737710ccfe417d1c074d12

--- a/app/assets/javascripts/discourse/app/templates/invites/show.hbs
+++ b/app/assets/javascripts/discourse/app/templates/invites/show.hbs
@@ -20,6 +20,12 @@
         <p>{{i18n "invites.invited_by"}}</p>
         <p>{{user-info user=invitedBy}}</p>
 
+        {{#if associateHtml}}
+          <p class="create-account-associate-link">
+            {{html-safe associateHtml}}
+          </p>
+        {{/if}}
+
         {{#unless isInviteLink}}
           <p class="email-message">
             {{html-safe yourEmailMessage}}
