UX: Indicate capped history revisions only when they're actually capped

--- a/app/assets/javascripts/discourse/app/templates/modal/history.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/history.hbs
@@ -1,4 +1,4 @@
-{{#d-modal-body title="history" maxHeight="70%"}}
+{{#d-modal-body title=modalTitleKey maxHeight="70%"}}
   <div id="revision">
     <div id="revision-details">
       {{d-icon "pencil-alt"}}
