--- a/app/assets/stylesheets/wizard.scss
+++ b/app/assets/stylesheets/wizard.scss
@@ -820,56 +820,23 @@ body.wizard {
 
 .wizard-step-form {
   max-height: 500px;
+  display: flex;
+
+  .wizard-fields-sidebar {
+    width: 190px;
+    margin-right: 20px;
+    box-sizing: border-box;
+    padding: 15px;
+    background: var(--primary-very-low);
+    + .wizard-field-main {
+      padding-top: 15px;
+    }
+  }
 }
 
 .wizard-step-homepage {
   .field-homepage-style {
     width: 280px;
-  }
-}
-
-.wizard-step-colors {
-  max-height: 465px;
-  overflow-y: auto;
-  .grid {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 0;
-    margin: 0 auto;
-    list-style-type: none;
-    text-align: center;
-
-    li {
-      display: inline-block;
-      vertical-align: top;
-      margin: 0 5px 25px 5px;
-      label:checked + div {
-        display: none;
-      }
-      .is-selected {
-        box-shadow: 0 0 0 5px var(--tertiary);
-      }
-      div {
-        display: flex;
-        flex: 1 1 auto;
-      }
-      .radio-area {
-        display: none;
-        & > * {
-          position: relative;
-          right: 7px;
-        }
-      }
-      canvas {
-        transition: box-shadow 0.25s;
-        &:hover {
-          box-shadow: shadow("card");
-          cursor: pointer;
-        }
-      }
-    }
   }
 }
 
@@ -891,7 +858,7 @@ body.wizard {
   box-sizing: border-box;
   margin: 1.5em auto;
   padding: 0;
-  max-width: 700px;
+  max-width: 920px;
   min-width: 280px;
   width: 100%;
   border: 1px solid var(--primary-low-mid);
