Better fix for details marker

--- a/app/assets/stylesheets/common/select-kit/select-kit.scss
+++ b/app/assets/stylesheets/common/select-kit/select-kit.scss
@@ -72,6 +72,11 @@
     display: flex;
     align-items: stretch;
 
+    /* hide native indicator */
+    &::-webkit-details-marker {
+      display: none;
+    }
+
     .select-kit-header-wrapper {
       box-sizing: border-box;
       min-height: 28px;
