--- a/app/assets/stylesheets/wizard.scss
+++ b/app/assets/stylesheets/wizard.scss
@@ -882,14 +882,14 @@ body.wizard {
       position: absolute;
       left: 0px;
       top: 0px;
-      transform: scale(0.8) translateX(-45px);
+      transform: scale(0.85) translateX(-45px);
     }
     .homepage-preview {
       position: absolute;
       left: calc(100% + 45px);
       top: 0px;
-      transform: scale(0.8) translateX(-90px);
-      padding-right: 40px;
+      transform: scale(0.85) translateX(-90px);
+      padding-right: 45px;
     }
   }
 }
@@ -1188,6 +1188,10 @@ body.wizard {
     }
 
     margin-bottom: 2em;
+  }
+
+  .wizard-image-row canvas {
+    border: 1px solid rgba(0, 0, 0, 0.2);
   }
 }
 
